2A/05_Projet_GL/src/test/deca/context/valid/complet/19_red_def_methode_sig_eg.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {
    int add(int a , int b ) {

    }
}

class B {
    int add(int c , int d) {
        
    }
}