2A/05_Projet_GL/src/test/deca/context/invalid/complet/27_duplication_decl_param.deca
// Description :
//    duplication du Decl param 
// Resultats :
//    ligne 10 : a est déjà déclarée
// Historique :
//  cree le 16/01/2024

class A {

    int add(int a , int a) {
        
    }
}